# ESP32-S3-M-VAVE-Blackbox-MIDI-Controller

./: CMakeLists.txt  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  idf_component.yml  main.c  midi_buttons.c  midi_class_driver_txrx.c  midi_class_driver_txrx.h  midi_device_tx.c  midi_device_tx.h  midi_tx_router.c  midi_tx_router.h
